# ffms2_cplugin

./: .gitignore  GNUmakefile  Makefile.am  configure  configure.ac  meson.build  meson_options.txt
include/: ffms.h  ffmscompat.h
src/avisynth/: avssources.h
src/avisynth_c/: avisynth.c  avs_common.h  avs_convert.h  avs_lib.c  avs_lib.h  avs_utils.c  avs_utils.h  ff_audsource.c  ff_filters.h  ff_vidsource.c
src/core/: indexing.cpp  videosource.cpp
src/index/: ffmsindex.cpp
